<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:padding="20dp"
    android:background="@drawable/back_login480"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:inputType="textPassword"
    android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:hint="@string/enter_old_password"
        android:id="@+id/et_old_pass"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingBottom="20dp"
        />
    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:id="@+id/et_new_pass"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingBottom="20dp"
        />
    <EditText
        android:inputType="textPassword"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:id="@+id/et_confirm_new_pass"
        android:layout_margin="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingBottom="20dp"
        />
    <Button
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="@color/button"
        android:text="@string/save"
        android:id="@+id/idBtnRegister"
        android:layout_alignParentBottom="true"
        />


</LinearLayout>